<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Second Activity" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text=""
        />
    <EditText
        android:id="@+id/pwd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text=""
        />

    <Button
        android:id="@+id/btn"
        android:onClick="Click"
        android:layout_width="300dp"
        android:layout_height="50dp" />
</LinearLayout>
